css issued on mobile fixed

--- a/src/scss/components/results.scss
+++ b/src/scss/components/results.scss
@@ -6,7 +6,7 @@
 
 .actual-weather-wrapper {
     height: 50vh;
-    min-height: 400px;
+    min-height: 500px;
     color: $white;
     background-position: center;
     background-size: cover;
